Fix event dates layout issue when changing from small to larger screen layout.

--- a/resources/assets/sass/sections/_events-list.scss
+++ b/resources/assets/sass/sections/_events-list.scss
@@ -18,6 +18,7 @@
 .event a {
 	color: $black;
 	cursor: pointer;
+	display: block;
 	position: relative;
 	text-decoration: none;
 }
